--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,19 @@
 /* This is for the food slot machine */
+.header {
+  padding: 20px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
+
+footer {
+  display: block;
+  padding: 20px;
+  text-align: center;
+  background-color:  #1abc9c;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -61,16 +76,9 @@ body {
   }
 
   /* This is for the movie slot machine */
-  body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
-  
   #app {
     width: 100%;
-    height: 100%;
+    height: 50%;
     background: #1a2b45;
     display: flex;
     flex-direction: column;
