--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 .header {
   padding: 20px;
   text-align: center;
-  background: #1abc9c;
+  background: #f20957;
   color: white;
   font-size: 30px;
 }
@@ -14,7 +14,7 @@ footer {
   display: block;
   padding: 20px;
   text-align: center;
-  background-color:  #1abc9c;
+  background-color:  #f20957;
 }
 
 body {
@@ -27,7 +27,7 @@ body {
   #app {
     width: 100%;
     height: 100%;
-    background: #1a2b45;
+    background: #dce1e7;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -82,7 +82,6 @@ body {
   #app {
     width: 100%;
     height: 50%;
-    background: #1a2b45;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -132,6 +131,3 @@ body {
     width: 100%;
     text-align: center;
   }
-
-  /* FOR BULMA CSS MODAL */
-  
