finished adding modal

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,7 +78,7 @@ body {
     text-align: center;
   }
 
-  /* This is for the movie slot machine */
+  /* this is for the movie slot machine */
   #app {
     width: 100%;
     height: 50%;
