--- a/assets/style.css
+++ b/assets/style.css
@@ -78,8 +78,8 @@ body {
     text-align: center;
   }
 
-  /* this is for the movie slot machine */
-  #app {
+  /* this is for the movie slot machine. Work in progress */
+  /* #app {
     width: 100%;
     height: 50%;
     display: flex;
@@ -129,4 +129,4 @@ body {
     bottom: 0;
     width: 100%;
     text-align: center;
-  }
+  } */
